--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -64,9 +66,16 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.navigation:navigation-compose:2.4.2'
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
     implementation 'com.google.android.material:material:1.6.1'
 
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-compiler:2.42'
+
+    implementation project(':ui-activities')
 
     testImplementation 'junit:junit:4.13.2'
 
