--- a/ui-activities/build.gradle
+++ b/ui-activities/build.gradle
@@ -34,6 +34,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion '1.6.10'
+    }
 }
 
 dependencies {
@@ -44,12 +51,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.4.2'
-
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
-
 
     implementation 'com.google.android.material:material:1.6.1'
 
