--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name="app.anutakay.compose_example.ComposeApp"
+        android:name=".ComposeApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeExample">
         <activity
-            android:name="app.anutakay.compose_example.home.MainActivity"
+            android:name=".home.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ComposeExample.NoActionBar">
             <intent-filter>
