add activities feed data layer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
 
+    implementation project(':data-android')
     implementation project(':ui-activities')
 
     testImplementation 'junit:junit:4.13.2'
