--- a/ui-activities/build.gradle
+++ b/ui-activities/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        minSdk 21
+        minSdk 26
         targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -58,6 +58,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.6.1'
 
+    implementation project(':data')
     implementation project(':domain')
 
     testImplementation 'junit:junit:4.13.2'
