--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ dependencyResolutionManagement {
 rootProject.name = "Compose example"
 include ':app'
 include ':ui-activities'
+include ':ui-add-activity'
 include ':data'
 include ':domain'
 include ':data-android'
