--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,5 +11,5 @@ java {
 dependencies {
     implementation 'javax.inject:javax.inject:1'
 
-    implementation project(':data')
+    api project(':data')
 }
