--- a/data/build.gradle
+++ b/data/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 sourceSets {
@@ -16,4 +16,5 @@ sourceSets {
 
 dependencies {
     implementation 'javax.inject:javax.inject:1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 }
