--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,12 +4,13 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
     implementation 'javax.inject:javax.inject:1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
     api project(':data')
 }
