--- a/ui-activities/build.gradle
+++ b/ui-activities/build.gradle
@@ -51,12 +51,18 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.4.2'
+
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
 
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
     implementation project(':domain')
 
