--- a/ui-add-activity/build.gradle
+++ b/ui-add-activity/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.4.2'
+
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'com.google.dagger:hilt-android:2.42'
