--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -12,5 +12,6 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
+    api project(':base')
     api project(':data')
 }
