--- a/ui-add-activity/build.gradle
+++ b/ui-add-activity/build.gradle
@@ -54,7 +54,6 @@ dependencies {
 
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
-   // testImplementation 'org.junit.jupiter:junit-jupiter'
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -66,6 +65,7 @@ dependencies {
     implementation project(':domain')
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-inline:4.6.1'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
