move model entities into separate module

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,6 @@ include ':common-ui'
 include ':data'
 include ':data-android'
 include ':domain'
+include ':model'
 include ':ui-activities'
 include ':ui-add-activity'
