--- a/ui-activities/build.gradle
+++ b/ui-activities/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     implementation 'com.google.android.material:material:1.6.1'
 
@@ -69,6 +70,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test:runner:1.5.0-alpha04"
+    androidTestImplementation "androidx.test:rules:1.4.1-alpha07"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
