--- a/ui-add-activity/build.gradle
+++ b/ui-add-activity/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
@@ -67,6 +68,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-inline:4.6.1'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test:runner:1.5.0-alpha04"
+    androidTestImplementation "androidx.test:rules:1.4.1-alpha07"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
