--- a/ui-activities/build.gradle
+++ b/ui-activities/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 26
         targetSdk 32
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "ru.anutakay.compose_example.HiltTestRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -47,30 +47,34 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.5.1'
 
-    implementation "androidx.compose.runtime:runtime:$compose_version"
-    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
-
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-
     implementation 'com.google.android.material:material:1.6.1'
 
-    implementation 'com.google.dagger:hilt-android:2.42'
-    kapt 'com.google.dagger:hilt-compiler:2.42'
+    implementation 'com.google.dagger:hilt-android:2.43.1'
+    kapt 'com.google.dagger:hilt-compiler:2.43.1'
 
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
     implementation project(':domain')
     implementation project(':common-ui')
 
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
     testImplementation 'junit:junit:4.13.2'
 
-    androidTestImplementation "androidx.test:runner:1.5.0-alpha04"
-    androidTestImplementation "androidx.test:rules:1.4.1-alpha07"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation 'androidx.test:runner:1.5.0-alpha04'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha07'
+
+    implementation project(':data-android')
+
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.43.1'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.43.1'
 }
