--- a/data-android/build.gradle
+++ b/data-android/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
 
+    implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+
     implementation project(':data')
 
     testImplementation 'junit:junit:4.13.2'
