Get activities by date from database

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -22,5 +22,5 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
-    implementation project(':model')
+    api project(':model')
 }
