--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -15,4 +15,9 @@ dependencies {
     api project(':model')
     api project(':base')
     api project(':data')
+
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+    testImplementation 'org.mockito:mockito-inline:4.6.1'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
 }
