--- a/data-android/build.gradle
+++ b/data-android/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'androidx.room:room-rxjava3:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
 
     implementation project(':data')
