migrate to material 3

--- a/ui-add-activity/build.gradle
+++ b/ui-add-activity/build.gradle
@@ -43,8 +43,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material3:material3:1.0.0-beta03"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
+
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -53,7 +54,7 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.5.2'
 
-    implementation 'com.google.android.material:material:1.6.1'
+    //implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'com.google.dagger:hilt-android:2.43.1'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
