--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,17 +59,18 @@ dependencies {
     //noinspection GradleDependency
     implementation 'androidx.activity:activity-compose:1.5.0-beta01'
 
+    implementation "androidx.compose.material3:material3:1.0.0-beta03"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation "androidx.appcompat:appcompat-resources:1.5.1"
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.5.2'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-
-    implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'com.google.dagger:hilt-android:2.43.1'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
