--- a/ui-activities/build.gradle
+++ b/ui-activities/build.gradle
@@ -43,17 +43,15 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material3:material3:1.0.0-beta03"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.5.2'
-
-    implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'com.google.dagger:hilt-android:2.43.1'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
@@ -72,12 +70,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.5.0-alpha04'
     androidTestImplementation 'androidx.test:rules:1.4.1-alpha07'
 
-    implementation project(':data-android')
-
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.43.1'
     kaptAndroidTest 'com.google.dagger:hilt-compiler:2.43.2'
-}
 
-hilt {
-    enableTransformForLocalTests = true
+    implementation project(':data-android')
 }
