--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 pluginManagement {
     plugins {
-        id 'org.jetbrains.kotlin.android' version '1.7.0'
+        id 'org.jetbrains.kotlin.android' version '1.7.10'
+        id 'com.android.library' version '7.2.2'
     }
 }
 
@@ -23,3 +24,4 @@ include ':domain'
 include ':model'
 include ':ui-activities'
 include ':ui-add-activity'
+include ':ui-add-emotion-note'
