--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     //noinspection GradleDependency
     implementation 'androidx.activity:activity-compose:1.5.0-beta01'
 
-    implementation "androidx.compose.material3:material3:1.0.0-beta03"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
+    implementation "androidx.compose.material3:material3:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.appcompat:appcompat-resources:1.5.1"
