--- a/ui-add-emotion-note/src/main/AndroidManifest.xml
+++ b/ui-add-emotion-note/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.anutakay.compose_example">
+    package="ru.anutakay.compose_example.add_emotion_note">
 
 </manifest>
