--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,16 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.2'
+        classpath("com.github.triplet.gradle:play-publisher:4.0.0-SNAPSHOT")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
