move modules into folders

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,12 +16,12 @@ dependencyResolutionManagement {
 
 rootProject.name = "Compose example"
 include ':app'
-include ':base'
-include ':common-ui'
-include ':data'
-include ':data-android'
-include ':domain'
-include ':model'
-include ':ui-activities'
-include ':ui-add-activity'
-include ':ui-add-emotion-note'
+include ':core:base'
+include ':core:common-ui'
+include ':core:data'
+include ':core:data-android'
+include ':core:domain'
+include ':core:model'
+include ':feature:ui-activities'
+include ':feature:ui-add-activity'
+include ':feature:ui-add-emotion-note'
