--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     //noinspection GradleDependency
     implementation 'androidx.activity:activity-compose:1.5.0-beta01'
 
-    implementation "androidx.compose.material3:material3:1.0.0-rc01"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.appcompat:appcompat-resources:1.5.1"
@@ -69,11 +69,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation 'com.google.dagger:hilt-android:2.43.1'
-    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
 
     implementation project(':core:data-android')
     implementation project(':feature:ui-activities')
