--- a/core/common-ui/build.gradle
+++ b/core/common-ui/build.gradle
@@ -33,11 +33,12 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_compiler_version
     }
+    namespace 'ru.anutakay.compose_example.common_ui'
 }
 
 dependencies {
-    implementation "androidx.compose.material3:material3:1.0.0-rc01"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.9.0'
