--- a/feature/ui-activities/build.gradle
+++ b/feature/ui-activities/build.gradle
@@ -40,21 +40,22 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_compiler_version
     }
+    namespace 'ru.anutakay.compose_example.activities'
 }
 
 dependencies {
-    implementation "androidx.compose.material3:material3:1.0.0-rc01"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava3:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
 
-    implementation 'com.google.dagger:hilt-android:2.43.1'
-    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
 
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
@@ -67,11 +68,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    androidTestImplementation 'androidx.test:runner:1.5.0-beta01'
-    androidTestImplementation 'androidx.test:rules:1.4.1-beta01'
+    androidTestImplementation 'androidx.test:runner:1.5.0-rc01'
+    androidTestImplementation 'androidx.test:rules:1.5.0-rc01'
 
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.43.1'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.43.2'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.44'
 
     implementation project(':core:data-android')
 }
