--- a/feature/ui-add-emotion-note/build.gradle
+++ b/feature/ui-add-emotion-note/build.gradle
@@ -40,11 +40,12 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_compiler_version
     }
+    namespace 'ru.anutakay.compose_example.add_emotion_note'
 }
 
 dependencies {
-    implementation "androidx.compose.material3:material3:1.0.0-rc01"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.compose.runtime:runtime:$compose_version"
@@ -53,10 +54,10 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
 
-    implementation 'com.google.dagger:hilt-android:2.43.1'
-    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
 
     implementation project(':core:domain')
     implementation project(':core:common-ui')
@@ -65,6 +66,6 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:4.6.1'
 
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    androidTestImplementation "androidx.test:runner:1.5.0-beta01"
-    androidTestImplementation "androidx.test:rules:1.4.1-beta01"
+    androidTestImplementation "androidx.test:runner:1.5.0-rc01"
+    androidTestImplementation "androidx.test:rules:1.5.0-rc01"
 }
